moved in TapTapBox

--- a/TapTapBox/tangible/index.html
+++ b/TapTapBox/tangible/index.html
@@ -12,11 +12,7 @@
 </head>
 
 <body>
-  <script id = "tangible"
-          src = "tangible.js">
-  </script>
-
-
+  <script id = "tangible"src = "tangible.js"> </script>
 
   <div class="row">
 
