--- a/TapTapBox/index.html
+++ b/TapTapBox/index.html
@@ -3,7 +3,7 @@
 <body>
 <iframe name="livecodelab" src="livecodelab-custom/index.html" scrolling="no" frameborder="0" style="height: 500px; width: 960px"></iframe>
 
-<iframe src="tangible/index.html" scrolling="no" frameborder="0" style="height: 100px"></iframe>
+<iframe name="tangible" src="tangible/index.html" scrolling="no" frameborder="0" style="height: 100px"></iframe>
 
 </body>
 </html>
