--- a/TapTapBox/index.html
+++ b/TapTapBox/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<iframe name="livecodelab" src="livecodelab-custom/index.html" scrolling="no" frameborder="0" style="height: 500px; width: 960px"></iframe>
+<iframe name="livecodelab" src="livecodelab-custom/index.html" scrolling="no" frameborder="0" style="float: left; lear: right; height: 500px; width: 960px"></iframe>
 
-<iframe name="tangible" src="tangible/index.html" scrolling="no" frameborder="0" style="height: 100px"></iframe>
+<iframe name="tangible" src="tangible/index.html" scrolling="no" frameborder="0" style="float: left; clear: right; height: 100px; width: 960px"></iframe>
 
 </body>
 </html>
