--- a/TapTapBox/tangible/index.html
+++ b/TapTapBox/tangible/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Made with Thimble</title>
+  <title>Tangible</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
@@ -17,44 +16,28 @@
   <div class="row">
 
     <div class="col-xs-6 col-md-1">
-      <a href="#" class="thumbnail">
-        <img id="im0" src="vide.png" alt="blublu">
-      </a>
+        <img id="im0" src="vide.png" alt="command">
     </div>
     <div class="col-xs-6 col-md-1">
-      <a href="#" class="thumbnail">
-        <img id="im1" src="vide.png" alt="blublu">
-      </a>
+        <img id="im1" src="vide.png" alt="command">
     </div>
     <div class="col-xs-6 col-md-1">
-      <a href="#" class="thumbnail">
-        <img id="im2" src="vide.png" alt="blublu">
-      </a>
+        <img id="im2" src="vide.png" alt="command">
     </div>
     <div class="col-xs-6 col-md-1">
-      <a href="#" class="thumbnail">
-        <img id="im3" src="vide.png" alt="blublu">
-      </a>
+        <img id="im3" src="vide.png" alt="command">
     </div>
     <div class="col-xs-6 col-md-1">
-      <a href="#" class="thumbnail">
-        <img id="im4" src="vide.png" alt="blublu">
-      </a>
+        <img id="im4" src="vide.png" alt="command">
     </div>
     <div class="col-xs-6 col-md-1">
-      <a href="#" class="thumbnail">
-        <img id="im5" src="vide.png" alt="blublu">
-      </a>
+        <img id="im5" src="vide.png" alt="command">
     </div>
     <div class="col-xs-6 col-md-1">
-      <a href="#" class="thumbnail">
-        <img id="im6" src="vide.png" alt="blublu">
-      </a>
+        <img id="im6" src="vide.png" alt="command">
     </div>
     <div class="col-xs-6 col-md-1">
-      <a href="#" class="thumbnail">
-        <img id="im7" src="vide.png" alt="blublu">
-      </a>
+        <img id="im7" src="vide.png" alt="command">
     </div>
   </div>
 
