--- a/TapTapBox/index.html
+++ b/TapTapBox/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-<iframe name="livecodelab" src="livecodelab-custom/index.html" scrolling="no" frameborder="0" style="float: left; lear: right; height: 500px; width: 960px"></iframe>
+<head>
+<link rel="stylesheet" href="style.css">
+</head>
+<body style = "background-color: black;">
+<iframe name="livecodelab" id="livecodelab" src="livecodelab-custom/index.html" scrolling="no" frameborder="0" style="float: left; lear: right; height: 500px; width: 960px"></iframe>
 
 <iframe name="tangible" src="tangible/index.html" scrolling="no" frameborder="0" style="float: left; clear: right; height: 120px; width: 960px"></iframe>
 
