--- a/TapTapBox/tangible/index.html
+++ b/TapTapBox/tangible/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="jquery-2.1.3.js"></script>
 </head>
 
 <body>
