visual detection of a fist adds a tile!

--- a/TapTapBox/tangible/index.html
+++ b/TapTapBox/tangible/index.html
@@ -8,11 +8,15 @@
 
 
   <script src="jquery-2.1.3.js"></script>
+
+  <script src="../objectdetect/compatibility.js"></script>
+  <script src="../objectdetect/objectdetect.js"></script>
+  <script src="../objectdetect/objectdetect.handfist.js"></script>
 </head>
 
 <body>
   <script id = "tangible"src = "tangible.js"> </script>
-
+    
   <div class="row">
 
     <div class="col-xs-6 col-md-1">
@@ -40,6 +44,6 @@
         <img id="im7" src="vide.png" alt="command">
     </div>
   </div>
-
+  <canvas id="canvas">
 </body>
 </html>
